--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -367,74 +367,146 @@ header {
         height: 66px;
         z-index: 51;
         position: relative;
-        .main-menu {
-            display: flex;
+        .menu-registration {
+            justify-content: space-between;
             align-items: center;
+            max-width: 1330px;
+            width: 100%;
             margin: 0 auto;
-            width: 1330px;
-            &__items {
+            display: flex;
+            .main-menu {
                 display: flex;
-                margin-left: 35px;
-                .nav-links {
-                    text-transform: uppercase;
-                    font-size: 14px;
-                    font-weight: 700;
-                    color: #aaaaab;
-                    line-height: 65px;
-                }
-                .nav-links:hover {
+                align-items: center;
+                &__items:hover .nav-links {
                     color: #fab81b !important;
                 }
-                .nav-arrow {
-                    background: url(../images/arrow/down.svg) no-repeat;
-                    background-position: center;
-                    position: relative;
-                    margin: 17px 0 2px 10px;
-                    width: 28px;
-                    height: 28px;
-                }
-                .nav-arrow:before {
-                    content: "";
-                    position: absolute;
-                    height: 10px;
-                    width: 1px;
-                    top: 10px;
-                    background-color: #aaaaab;
-                }
-                .nav-arrow:hover {
-                    background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMiA3IiB3aWR0aD0iOCIgaGVpZ2h0PSI1Ij48cGF0aCBmaWxsPSIjM2MyZjEyIiBkPSJNMTIgMlYwaC0xTDYgNCAxIDBIMHYybDUuOSA1SDZ6Ii8+PC9zdmc+) no-repeat;
-                    background-position: center;
-                    background-color: #fab81b;
+                &__items {
+                    display: flex;
+                    margin-left: 35px;
                     cursor: pointer;
-                }
-            }
-            &__items:nth-child(1) {
-                background: url(../images/logo-wot/download.svg) no-repeat;
-                background-position: center;
-                margin-left: 0;
-                height: 44px;
-                width: 185px;
-            }
-            .nav-list {
-                background-color: rgba(39,39,43,.93);
-                position: absolute;
-                margin-left: -20px;
-                top: 65px;
-                display: none;
-                &__link {
-                    display: block;
-                    padding: 14px 16px;
-                    color: #aaaaab;
-                    font-size: 14px;
-                }
-                &__link:hover {
-                    color: #fab81b !important;
-                }
-                .nav-list:first-child {
-                    .nav-list__items:nth-child(2) {
+                    .nav-links {
                         text-transform: uppercase;
+                        font-size: 14px;
+                        font-weight: 700;
+                        color: #aaaaab;
+                        line-height: 65px;
                     }
-
+                    .nav-arrow {
+                        background: url(../images/arrow/down.svg) no-repeat;
+                        background-position: center;
+                        position: relative;
+                        margin: 17px 0 2px 10px;
+                        width: 28px;
+                        height: 28px;
+                    }
+                    .nav-arrow:before {
+                        content: "";
+                        position: absolute;
+                        height: 10px;
+                        width: 1px;
+                        top: 10px;
+                        background-color: #aaaaab;
+                    }
+                    .nav-arrow:hover:before{
+                        background-color: #fab81b !important;
+                    }
+                    .nav-arrow:hover {
+                        background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMiA3IiB3aWR0aD0iOCIgaGVpZ2h0PSI1Ij48cGF0aCBmaWxsPSIjM2MyZjEyIiBkPSJNMTIgMlYwaC0xTDYgNCAxIDBIMHYybDUuOSA1SDZ6Ii8+PC9zdmc+) no-repeat;
+                        background-position: center;
+                        background-color: #fab81b;
+                        cursor: pointer;
+                    }
+                }
+                &__items:nth-child(1) {
+                    background: url(../images/logo-wot/download.svg) no-repeat;
+                    background-position: 0 center;
+                    margin-left: 0;
+                    height: 44px;
+                    width: 128px;
+                }
+                &__items:nth-child(5) {
+                    .ten-years {
+                        height: 65px;
+                        &__logo {
+                            background: url(../images/10-year/10-year-icon.png) center / contain;
+                            position: absolute;
+                            margin-top: 10px;
+                            z-index: 10;
+                            float: left;
+                            height: 44px;
+                            width: 44px;
+                        }
+                        &__logo-hover {
+                            background: url(../images/10-year/10y-icon-hover.png) center ;
+                            transition: opacity .7s;
+                            margin: -13px 0 0 -13px;
+                            background-size: 150%;
+                            position: absolute;
+                            pointer-events: none;
+                            opacity: 0;
+                            float: left;
+                            height: 90px;
+                            width: 70px;
+                        }
+                        .rotate-hover {
+                            opacity: 1;
+                            pointer-events: initial;
+                        }
+                        &__text {
+                            background: linear-gradient(to top,#d19235 0%,#cd6a11 8%,#d87519 26%,#f2bf65 61%,#ffff91 100%);
+                            font-family: Arial, Helvetica, sans-serif;
+                            -webkit-background-clip: text;
+                            text-transform: uppercase;
+                            margin-left: 40px;
+                            color: transparent;
+                            line-height: 65px;
+                            font-weight: 600;
+                        }
+                    }
+                }
+                .nav-list {
+                    background-color: rgba(39,39,43,.93);
+                    position: absolute;
+                    margin-left: -20px;
+                    top: 65px;
+                    display: none;
+                    &__link {
+                        display: block;
+                        padding: 14px 16px;
+                        color: #aaaaab;
+                        font-size: 14px;
+                    }
+                    &__link:hover {
+                        color: #fab81b !important;
+                    }
+                    .nav-list:first-child {
+                        .nav-list__items:nth-child(2) {
+                            text-transform: uppercase;
+                        }
+    
+                    }
+                }
+            }
+            .registration {
+                background: linear-gradient(to bottom,#fab81b 0%,#ef4511 100%) no-repeat 0,linear-gradient(to bottom,#fab81b 0%,#ef4511 100%) no-repeat 100%,#f25322 linear-gradient(to bottom,#f60 0%,#a6230e 100%) no-repeat;
+                box-shadow: 0 2px 0 #661000, inset 0 0 8px rgba(255,210,0,.1), inset 0 1px 0 #fab81b, inset 0 -1px 0 #ef4511;
+                background-size: 1px 100%,1px 100%,cover;
+                width: 185px;
+                height: 44px;
+                &__text {
+                    font-family: Arial, Helvetica, sans-serif;
+                    text-transform: uppercase;
+                    font-weight: 700;
+                    line-height: 45px;
+                    color: #f9f5e1;
+                    font-size: 12px;
+                    text-align: center;
+                    display: block;
+                }
+                &:hover {
+                    background: linear-gradient(to bottom,#fab81b 0%,#ff7e00 100%) no-repeat 0,linear-gradient(to bottom,#fab81b 0%,#ff7e00 100%) no-repeat 100%,#ff7e00 linear-gradient(to bottom,#ff7e00 0%,#c2530a 100%) no-repeat;
+                    box-shadow: inset 0 0 8px rgba(255,210,0,.1), inset 0 1px 0 #fab81b, inset 0 -1px 0 #ff7e00;
+                    background-size: 1px 100%,1px 100%,cover;
                 }
             }
         }
