--- a/style/style.css
+++ b/style/style.css
@@ -389,68 +389,147 @@ header {
   height: 66px;
   z-index: 51;
   position: relative; }
-  .main-heading .nav-menu .main-menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .main-heading .nav-menu .menu-registration {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    max-width: 1330px;
+    width: 100%;
     margin: 0 auto;
-    width: 1330px; }
-    .main-heading .nav-menu .main-menu__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .main-heading .nav-menu .menu-registration .main-menu {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      margin-left: 35px; }
-      .main-heading .nav-menu .main-menu__items .nav-links {
-        text-transform: uppercase;
-        font-size: 14px;
-        font-weight: 700;
-        color: #aaaaab;
-        line-height: 65px; }
-      .main-heading .nav-menu .main-menu__items .nav-links:hover {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .main-heading .nav-menu .menu-registration .main-menu__items:hover .nav-links {
         color: #fab81b !important; }
-      .main-heading .nav-menu .main-menu__items .nav-arrow {
-        background: url(../images/arrow/down.svg) no-repeat;
-        background-position: center;
-        position: relative;
-        margin: 17px 0 2px 10px;
-        width: 28px;
-        height: 28px; }
-      .main-heading .nav-menu .main-menu__items .nav-arrow:before {
-        content: "";
-        position: absolute;
-        height: 10px;
-        width: 1px;
-        top: 10px;
-        background-color: #aaaaab; }
-      .main-heading .nav-menu .main-menu__items .nav-arrow:hover {
-        background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMiA3IiB3aWR0aD0iOCIgaGVpZ2h0PSI1Ij48cGF0aCBmaWxsPSIjM2MyZjEyIiBkPSJNMTIgMlYwaC0xTDYgNCAxIDBIMHYybDUuOSA1SDZ6Ii8+PC9zdmc+) no-repeat;
-        background-position: center;
-        background-color: #fab81b;
+      .main-heading .nav-menu .menu-registration .main-menu__items {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        margin-left: 35px;
         cursor: pointer; }
-    .main-heading .nav-menu .main-menu__items:nth-child(1) {
-      background: url(../images/logo-wot/download.svg) no-repeat;
-      background-position: center;
-      margin-left: 0;
-      height: 44px;
-      width: 185px; }
-    .main-heading .nav-menu .main-menu .nav-list {
-      background-color: rgba(39, 39, 43, 0.93);
-      position: absolute;
-      margin-left: -20px;
-      top: 65px;
-      display: none; }
-      .main-heading .nav-menu .main-menu .nav-list__link {
-        display: block;
-        padding: 14px 16px;
-        color: #aaaaab;
-        font-size: 14px; }
-      .main-heading .nav-menu .main-menu .nav-list__link:hover {
-        color: #fab81b !important; }
-      .main-heading .nav-menu .main-menu .nav-list .nav-list:first-child .nav-list__items:nth-child(2) {
-        text-transform: uppercase; }
+        .main-heading .nav-menu .menu-registration .main-menu__items .nav-links {
+          text-transform: uppercase;
+          font-size: 14px;
+          font-weight: 700;
+          color: #aaaaab;
+          line-height: 65px; }
+        .main-heading .nav-menu .menu-registration .main-menu__items .nav-arrow {
+          background: url(../images/arrow/down.svg) no-repeat;
+          background-position: center;
+          position: relative;
+          margin: 17px 0 2px 10px;
+          width: 28px;
+          height: 28px; }
+        .main-heading .nav-menu .menu-registration .main-menu__items .nav-arrow:before {
+          content: "";
+          position: absolute;
+          height: 10px;
+          width: 1px;
+          top: 10px;
+          background-color: #aaaaab; }
+        .main-heading .nav-menu .menu-registration .main-menu__items .nav-arrow:hover:before {
+          background-color: #fab81b !important; }
+        .main-heading .nav-menu .menu-registration .main-menu__items .nav-arrow:hover {
+          background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMiA3IiB3aWR0aD0iOCIgaGVpZ2h0PSI1Ij48cGF0aCBmaWxsPSIjM2MyZjEyIiBkPSJNMTIgMlYwaC0xTDYgNCAxIDBIMHYybDUuOSA1SDZ6Ii8+PC9zdmc+) no-repeat;
+          background-position: center;
+          background-color: #fab81b;
+          cursor: pointer; }
+      .main-heading .nav-menu .menu-registration .main-menu__items:nth-child(1) {
+        background: url(../images/logo-wot/download.svg) no-repeat;
+        background-position: 0 center;
+        margin-left: 0;
+        height: 44px;
+        width: 128px; }
+      .main-heading .nav-menu .menu-registration .main-menu__items:nth-child(5) .ten-years {
+        height: 65px; }
+        .main-heading .nav-menu .menu-registration .main-menu__items:nth-child(5) .ten-years__logo {
+          background: url(../images/10-year/10-year-icon.png) center/contain;
+          position: absolute;
+          margin-top: 10px;
+          z-index: 10;
+          float: left;
+          height: 44px;
+          width: 44px; }
+        .main-heading .nav-menu .menu-registration .main-menu__items:nth-child(5) .ten-years__logo-hover {
+          background: url(../images/10-year/10y-icon-hover.png) center;
+          -webkit-transition: opacity .7s;
+          -o-transition: opacity .7s;
+          transition: opacity .7s;
+          margin: -13px 0 0 -13px;
+          background-size: 150%;
+          position: absolute;
+          pointer-events: none;
+          opacity: 0;
+          float: left;
+          height: 90px;
+          width: 70px; }
+        .main-heading .nav-menu .menu-registration .main-menu__items:nth-child(5) .ten-years .rotate-hover {
+          opacity: 1;
+          pointer-events: initial; }
+        .main-heading .nav-menu .menu-registration .main-menu__items:nth-child(5) .ten-years__text {
+          background: -webkit-gradient(linear, left bottom, left top, from(#d19235), color-stop(8%, #cd6a11), color-stop(26%, #d87519), color-stop(61%, #f2bf65), to(#ffff91));
+          background: -webkit-linear-gradient(bottom, #d19235 0%, #cd6a11 8%, #d87519 26%, #f2bf65 61%, #ffff91 100%);
+          background: -o-linear-gradient(bottom, #d19235 0%, #cd6a11 8%, #d87519 26%, #f2bf65 61%, #ffff91 100%);
+          background: linear-gradient(to top, #d19235 0%, #cd6a11 8%, #d87519 26%, #f2bf65 61%, #ffff91 100%);
+          font-family: Arial, Helvetica, sans-serif;
+          -webkit-background-clip: text;
+          text-transform: uppercase;
+          margin-left: 40px;
+          color: transparent;
+          line-height: 65px;
+          font-weight: 600; }
+      .main-heading .nav-menu .menu-registration .main-menu .nav-list {
+        background-color: rgba(39, 39, 43, 0.93);
+        position: absolute;
+        margin-left: -20px;
+        top: 65px;
+        display: none; }
+        .main-heading .nav-menu .menu-registration .main-menu .nav-list__link {
+          display: block;
+          padding: 14px 16px;
+          color: #aaaaab;
+          font-size: 14px; }
+        .main-heading .nav-menu .menu-registration .main-menu .nav-list__link:hover {
+          color: #fab81b !important; }
+        .main-heading .nav-menu .menu-registration .main-menu .nav-list .nav-list:first-child .nav-list__items:nth-child(2) {
+          text-transform: uppercase; }
+    .main-heading .nav-menu .menu-registration .registration {
+      background: -webkit-gradient(linear, left top, left bottom, from(#fab81b), to(#ef4511)) no-repeat 0, -webkit-gradient(linear, left top, left bottom, from(#fab81b), to(#ef4511)) no-repeat 100%, #f25322 -webkit-gradient(linear, left top, left bottom, from(#f60), to(#a6230e)) no-repeat;
+      background: -webkit-linear-gradient(top, #fab81b 0%, #ef4511 100%) no-repeat 0, -webkit-linear-gradient(top, #fab81b 0%, #ef4511 100%) no-repeat 100%, #f25322 -webkit-linear-gradient(top, #f60 0%, #a6230e 100%) no-repeat;
+      background: -o-linear-gradient(top, #fab81b 0%, #ef4511 100%) no-repeat 0, -o-linear-gradient(top, #fab81b 0%, #ef4511 100%) no-repeat 100%, #f25322 -o-linear-gradient(top, #f60 0%, #a6230e 100%) no-repeat;
+      background: linear-gradient(to bottom, #fab81b 0%, #ef4511 100%) no-repeat 0, linear-gradient(to bottom, #fab81b 0%, #ef4511 100%) no-repeat 100%, #f25322 linear-gradient(to bottom, #f60 0%, #a6230e 100%) no-repeat;
+      -webkit-box-shadow: 0 2px 0 #661000, inset 0 0 8px rgba(255, 210, 0, 0.1), inset 0 1px 0 #fab81b, inset 0 -1px 0 #ef4511;
+      box-shadow: 0 2px 0 #661000, inset 0 0 8px rgba(255, 210, 0, 0.1), inset 0 1px 0 #fab81b, inset 0 -1px 0 #ef4511;
+      background-size: 1px 100%,1px 100%,cover;
+      width: 185px;
+      height: 44px; }
+      .main-heading .nav-menu .menu-registration .registration__text {
+        font-family: Arial, Helvetica, sans-serif;
+        text-transform: uppercase;
+        font-weight: 700;
+        line-height: 45px;
+        color: #f9f5e1;
+        font-size: 12px;
+        text-align: center;
+        display: block; }
+      .main-heading .nav-menu .menu-registration .registration:hover {
+        background: -webkit-gradient(linear, left top, left bottom, from(#fab81b), to(#ff7e00)) no-repeat 0, -webkit-gradient(linear, left top, left bottom, from(#fab81b), to(#ff7e00)) no-repeat 100%, #ff7e00 -webkit-gradient(linear, left top, left bottom, from(#ff7e00), to(#c2530a)) no-repeat;
+        background: -webkit-linear-gradient(top, #fab81b 0%, #ff7e00 100%) no-repeat 0, -webkit-linear-gradient(top, #fab81b 0%, #ff7e00 100%) no-repeat 100%, #ff7e00 -webkit-linear-gradient(top, #ff7e00 0%, #c2530a 100%) no-repeat;
+        background: -o-linear-gradient(top, #fab81b 0%, #ff7e00 100%) no-repeat 0, -o-linear-gradient(top, #fab81b 0%, #ff7e00 100%) no-repeat 100%, #ff7e00 -o-linear-gradient(top, #ff7e00 0%, #c2530a 100%) no-repeat;
+        background: linear-gradient(to bottom, #fab81b 0%, #ff7e00 100%) no-repeat 0, linear-gradient(to bottom, #fab81b 0%, #ff7e00 100%) no-repeat 100%, #ff7e00 linear-gradient(to bottom, #ff7e00 0%, #c2530a 100%) no-repeat;
+        -webkit-box-shadow: inset 0 0 8px rgba(255, 210, 0, 0.1), inset 0 1px 0 #fab81b, inset 0 -1px 0 #ff7e00;
+        box-shadow: inset 0 0 8px rgba(255, 210, 0, 0.1), inset 0 1px 0 #fab81b, inset 0 -1px 0 #ff7e00;
+        background-size: 1px 100%,1px 100%,cover; }
 
 .main-heading .container-box {
   width: 1330px;
